Single day plotter - data loading

--- a/SBM2 degraded tuning.ipynb
+++ b/SBM2 degraded tuning.ipynb
@@ -37,20 +37,22 @@
     "    WA_AMP_MED = np.array([])\n",
     "    WA_NR_EVENTS = np.array([])\n",
     "    time = np.array([])\n",
+    "    Epoch = np.array([])\n",
     "    for month in range(1, 13): # Month is always 1..12\n",
     "        for day in range(1, monthrange(year, month)[1] + 1):\n",
-    "            Fp1, WA_AMP_MED1, WA_NR_EVENTS1, time1 = check_date(year, month, day)\n",
+    "            Fp1, WA_AMP_MED1, WA_NR_EVENTS1, time1, Epoch1 = check_date(year, month, day)\n",
     "            if not isinstance(Fp1, int):\n",
     "                Fp = np.append(Fp, Fp1)\n",
     "                WA_AMP_MED = np.append(WA_AMP_MED, WA_AMP_MED1)\n",
     "                WA_NR_EVENTS = np.append(WA_NR_EVENTS, WA_NR_EVENTS1)\n",
     "                time = np.append(time, time1)\n",
-    "    return [Fp, WA_AMP_MED, WA_NR_EVENTS, time]"
+    "                Epoch = np.append(Epoch, Epoch1)\n",
+    "    return [Fp, WA_AMP_MED, WA_NR_EVENTS, time, Epoch]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d3f358bc",
    "metadata": {},
    "outputs": [],
@@ -61,18 +63,19 @@
     "        print('Checking %04d%02d%02d_V' % (year, month, day))\n",
     "        return SBM_degraded(data)\n",
     "    else:\n",
-    "        return [-1,-1,-1,-1]"
+    "        return [-1,-1,-1,-1,-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9c04ea30",
    "metadata": {},
    "outputs": [],
    "source": [
     "def SBM_degraded(data):\n",
-    "    time = cdflib.cdfepoch.unixtime(data['Epoch'])\n",
+    "    time = cdflib.cdfepoch.breakdown_tt2000(data['Epoch'])\n",
+    "    Epoch = data['Epoch']\n",
     "    #time =[dt.datetime.fromtimestamp(ts) for ts in time]\n",
     "    Fp = 1024 * 2 ** (data['WA_MED_FREQ'] / 32)\n",
     "    WA_AMP_MED = data['WA_AMP_MED']\n",
@@ -83,9 +86,9 @@
     "    #FP_MIN = 5000   #Hz\n",
     "    #FP_MAX = 60000  #Hz\n",
     "    #RUA = 0.5       #AU  ??\n",
-    "    #NW_THRES_F = 20\n",
+    "    #NW_THRES_F = 3\n",
     "    \n",
-    "    return [Fp, WA_AMP_MED, WA_NR_EVENTS, time]"
+    "    return [Fp, WA_AMP_MED, WA_NR_EVENTS, time, Epoch]"
    ]
   },
   {
@@ -108,10 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d9934b5b",
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
     {
@@ -488,16 +491,14 @@
     }
    ],
    "source": [
-    "[Fp, WA_AMP_MED, WA_NR_EVENTS, time] = all_dates_in_year(2020)\n"
+    "[Fp, WA_AMP_MED, WA_NR_EVENTS, time, Epoch] = all_dates_in_year(2020)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "e50d21cf",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -665,14 +666,14 @@
       "Checking 20210609_V\n",
       "Checking 20210610_V\n",
       "Checking 20210611_V\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
+      "Checking 20210612_V\n",
+      "Checking 20210613_V\n",
+      "Checking 20210614_V\n",
+      "Checking 20210615_V\n",
+      "Checking 20210616_V\n",
+      "Checking 20210617_V\n",
+      "Checking 20210618_V\n",
+      "Checking 20210619_V\n",
       "Dir not found\n",
       "Dir not found\n",
       "Dir not found\n",
@@ -872,47 +873,47 @@
     }
    ],
    "source": [
-    "[Fp21, WA_AMP_MED21, WA_NR_EVENTS21, time21] = all_dates_in_year(2021)"
+    "[Fp21, WA_AMP_MED21, WA_NR_EVENTS21, time21, Epoch21] = all_dates_in_year(2021)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "41e38338",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Fp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-6a98c9e55915>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mFp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFp21\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mWA_AMP_MED\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWA_AMP_MED\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mWA_AMP_MED21\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mWA_NR_EVENTS\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWA_NR_EVENTS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mWA_NR_EVENTS21\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtime21\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Fp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Fp = np.append(Fp, Fp21)\n",
     "WA_AMP_MED = np.append(WA_AMP_MED, WA_AMP_MED21)\n",
     "WA_NR_EVENTS = np.append(WA_NR_EVENTS, WA_NR_EVENTS21)\n",
-    "time = np.append(time, time21)"
+    "time = np.append(time, time21)\n",
+    "Epoch = np.append(Epoch, Epoch21)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "285ef6fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2373729,)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Epoch = time"
+    "Epoch.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "27b8e6e8",
    "metadata": {
     "scrolled": true
@@ -927,40 +928,31 @@
     "rua = scipy.io.loadmat('rua.mat')\n",
     "rua = rua['rua']\n",
     "rua = np.transpose(rua)\n",
-    "rua = scipy.signal.resample(rua, 2330067)"
+    "rua = scipy.signal.resample(rua, 2373729)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "587add6c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Epoch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-563f07cd1037>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'backup_SBM2_data_V3.pickle'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mFp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mWA_AMP_MED\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mWA_NR_EVENTS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mEpoch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrua\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'Epoch' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('backup_SBM2_data_V3.pickle', 'wb') as f:\n",
+    "with open('backup_SBM2_data_V4.pickle', 'wb') as f:\n",
     "    pickle.dump([Fp, WA_AMP_MED, WA_NR_EVENTS, time, Epoch, rua], f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e1a865d9",
+   "execution_count": 18,
+   "id": "de9439ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.close()"
+    "with open('SBM2_raw_data_V5.pickle', 'wb') as f:\n",
+    "    pickle.dump([Fp, WA_AMP_MED, WA_NR_EVENTS, Epoch], f)\n",
+    "with open('SBM2_timepos_data_V5.pickle', 'wb') as f:\n",
+    "    pickle.dump([time, rua], f)"
    ]
   },
   {
