More accurate RUA

--- a/SBM2 degraded tuning final.ipynb
+++ b/SBM2 degraded tuning final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5022f059",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ebe7bf20",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5278ec02",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "2259412b",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8060460c",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "cdda2f36",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "bb357ef3",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c41d4a0c",
    "metadata": {},
    "outputs": [
@@ -135,26 +135,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2020/05/02' '2020/07/10' '2020/11/18' '2020/12/10' '2020/12/11'\n",
-      " '2020/12/17' '2020/12/27' '2021/01/05' '2021/03/19' '2021/03/20'\n",
-      " '2021/05/09' '2021/05/22' '2021/05/23' '2021/05/31']\n",
-      "['2020/05/02 - 11' '2020/05/02 - 12' '2020/07/10 - 06' '2020/11/18 - 20'\n",
-      " '2020/12/10 - 09' '2020/12/10 - 19' '2020/12/11 - 01' '2020/12/17 - 14'\n",
+      "['2020/04/18' '2020/04/19' '2020/05/02' '2020/05/30' '2020/07/10'\n",
+      " '2020/07/23' '2020/07/24' '2020/08/04' '2020/08/27' '2020/08/29'\n",
+      " '2020/08/31' '2020/11/18' '2020/11/24' '2020/12/06' '2020/12/10'\n",
+      " '2020/12/11' '2020/12/14' '2020/12/17' '2020/12/20' '2020/12/27'\n",
+      " '2021/01/05' '2021/01/13' '2021/01/14' '2021/03/19' '2021/03/20'\n",
+      " '2021/03/27' '2021/05/09' '2021/05/10' '2021/05/22' '2021/05/23'\n",
+      " '2021/05/29' '2021/05/31' '2021/06/01' '2021/06/04' '2021/06/07'\n",
+      " '2021/06/08']\n",
+      "['2020/04/18 - 15' '2020/04/19 - 07' '2020/05/02 - 11' '2020/05/02 - 12'\n",
+      " '2020/05/30 - 19' '2020/05/30 - 20' '2020/07/10 - 05' '2020/07/10 - 06'\n",
+      " '2020/07/23 - 02' '2020/07/24 - 14' '2020/08/04 - 22' '2020/08/27 - 04'\n",
+      " '2020/08/29 - 23' '2020/08/31 - 19' '2020/11/18 - 15' '2020/11/18 - 20'\n",
+      " '2020/11/24 - 15' '2020/12/06 - 16' '2020/12/10 - 09' '2020/12/10 - 19'\n",
+      " '2020/12/10 - 22' '2020/12/11 - 01' '2020/12/11 - 02' '2020/12/14 - 08'\n",
+      " '2020/12/17 - 14' '2020/12/20 - 13' '2020/12/20 - 14' '2020/12/27 - 04'\n",
       " '2020/12/27 - 05' '2020/12/27 - 06' '2020/12/27 - 07' '2020/12/27 - 08'\n",
-      " '2020/12/27 - 09' '2020/12/27 - 10' '2021/01/05 - 09' '2021/03/19 - 21'\n",
-      " '2021/03/20 - 06' '2021/03/20 - 07' '2021/03/20 - 08' '2021/05/09 - 16'\n",
-      " '2021/05/09 - 17' '2021/05/09 - 18' '2021/05/22 - 02' '2021/05/22 - 03'\n",
-      " '2021/05/22 - 06' '2021/05/22 - 09' '2021/05/23 - 11' '2021/05/23 - 12'\n",
-      " '2021/05/23 - 13' '2021/05/31 - 21' '2021/05/31 - 22']\n"
+      " '2020/12/27 - 09' '2020/12/27 - 10' '2021/01/05 - 06' '2021/01/05 - 09'\n",
+      " '2021/01/13 - 23' '2021/01/14 - 00' '2021/03/19 - 19' '2021/03/19 - 20'\n",
+      " '2021/03/19 - 21' '2021/03/19 - 22' '2021/03/20 - 06' '2021/03/20 - 07'\n",
+      " '2021/03/27 - 16' '2021/03/27 - 17' '2021/05/09 - 16' '2021/05/09 - 17'\n",
+      " '2021/05/09 - 18' '2021/05/10 - 13' '2021/05/22 - 02' '2021/05/22 - 03'\n",
+      " '2021/05/22 - 05' '2021/05/22 - 06' '2021/05/22 - 09' '2021/05/23 - 07'\n",
+      " '2021/05/23 - 09' '2021/05/23 - 10' '2021/05/23 - 11' '2021/05/23 - 12'\n",
+      " '2021/05/23 - 13' '2021/05/29 - 02' '2021/05/31 - 12' '2021/05/31 - 21'\n",
+      " '2021/05/31 - 22' '2021/06/01 - 04' '2021/06/04 - 13' '2021/06/07 - 21'\n",
+      " '2021/06/07 - 22' '2021/06/08 - 18']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tform\\miniconda3\\envs\\tensorflow\\lib\\site-packages\\ipykernel_launcher.py:15: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  from ipykernel import kernelapp as app\n",
-      "C:\\Users\\tform\\miniconda3\\envs\\tensorflow\\lib\\site-packages\\ipykernel_launcher.py:18: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n"
+      "<ipython-input-9-a62807f11233>:15: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  if date not in dates:\n",
+      "<ipython-input-9-a62807f11233>:18: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  if datedet not in datesdet:\n"
      ]
     }
    ],
@@ -167,15 +183,16 @@
     "Custom2 = SBM2_Check(AMP, NR, FP, EPEAK_THRESH_F=75, NW_THRES_F=3, FP_MIN=5000, FP_MAX=60000, RUA=rua) # experimental\n",
     "Confirm = SBM2_Check(AMP, NR, FP, EPEAK_THRESH_F=728, NW_THRES_F=3, FP_MIN=5000, FP_MAX=60000, RUA=rua) # experimental\n",
     "Confirm = SBM2_Check(AMP, NR, FP, EPEAK_THRESH_F=300, NW_THRES_F=3, FP_MIN=5000, FP_MAX=60000, RUA=rua) # experimental\n",
+    "# ustom2 = {'EPEAK_THRES': 150, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom2', 'type': 'dev'}\n",
+    "new = SBM2_Check(AMP, NR, FP, EPEAK_THRESH_F=150, NW_THRES_F=1, FP_MIN=2500, FP_MAX=25000, RUA=rua)\n",
     "\n",
     "\n",
-    "\n",
-    "a = SBM2_Find(Custom1, Epoch, time, 2400, 20)"
+    "a = SBM2_Find(Custom1, Epoch, time, 1200, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "id": "89bb455f",
    "metadata": {},
    "outputs": [
@@ -183,27 +200,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "correct: 17\n",
-      "false: 22\n"
+      "incorrect: 2020/04/18 - 15\n",
+      "incorrect: 2020/04/19 - 07\n",
+      "incorrect: 2020/05/02 - 11\n",
+      "incorrect: 2020/05/02 - 12\n",
+      "incorrect: 2020/05/30 - 19\n",
+      "incorrect: 2020/05/30 - 20\n",
+      "incorrect: 2020/07/10 - 05\n",
+      "incorrect: 2020/07/10 - 06\n",
+      "incorrect: 2020/07/23 - 02\n",
+      "incorrect: 2020/07/24 - 14\n",
+      "incorrect: 2020/08/04 - 22\n",
+      "incorrect: 2020/08/27 - 04\n",
+      "incorrect: 2020/08/29 - 23\n",
+      "incorrect: 2020/08/31 - 19\n",
+      "correct: 2020/11/18 - 15\n",
+      "correct: 2020/11/18 - 20\n",
+      "incorrect: 2020/11/24 - 15\n",
+      "incorrect: 2020/12/06 - 16\n",
+      "correct: 2020/12/10 - 09\n",
+      "correct: 2020/12/10 - 19\n",
+      "correct: 2020/12/10 - 22\n",
+      "correct: 2020/12/11 - 01\n",
+      "correct: 2020/12/11 - 02\n",
+      "correct: 2020/12/14 - 08\n",
+      "incorrect: 2020/12/17 - 14\n",
+      "incorrect: 2020/12/20 - 13\n",
+      "incorrect: 2020/12/20 - 14\n",
+      "incorrect: 2020/12/27 - 04\n",
+      "incorrect: 2020/12/27 - 05\n",
+      "incorrect: 2020/12/27 - 06\n",
+      "incorrect: 2020/12/27 - 07\n",
+      "incorrect: 2020/12/27 - 08\n",
+      "incorrect: 2020/12/27 - 09\n",
+      "incorrect: 2020/12/27 - 10\n",
+      "incorrect: 2021/01/05 - 06\n",
+      "incorrect: 2021/01/05 - 09\n",
+      "incorrect: 2021/01/13 - 23\n",
+      "incorrect: 2021/01/14 - 00\n",
+      "incorrect: 2021/03/19 - 19\n",
+      "incorrect: 2021/03/19 - 20\n",
+      "incorrect: 2021/03/19 - 21\n",
+      "incorrect: 2021/03/19 - 22\n",
+      "incorrect: 2021/03/20 - 06\n",
+      "incorrect: 2021/03/20 - 07\n",
+      "incorrect: 2021/03/27 - 16\n",
+      "incorrect: 2021/03/27 - 17\n",
+      "correct: 2021/05/09 - 16\n",
+      "correct: 2021/05/09 - 17\n",
+      "correct: 2021/05/09 - 18\n",
+      "incorrect: 2021/05/10 - 13\n",
+      "correct: 2021/05/22 - 02\n",
+      "correct: 2021/05/22 - 03\n",
+      "correct: 2021/05/22 - 05\n",
+      "correct: 2021/05/22 - 06\n",
+      "correct: 2021/05/22 - 09\n",
+      "correct: 2021/05/23 - 07\n",
+      "correct: 2021/05/23 - 09\n",
+      "correct: 2021/05/23 - 10\n",
+      "correct: 2021/05/23 - 11\n",
+      "correct: 2021/05/23 - 12\n",
+      "correct: 2021/05/23 - 13\n",
+      "correct: 2021/05/29 - 02\n",
+      "incorrect: 2021/05/31 - 12\n",
+      "incorrect: 2021/05/31 - 21\n",
+      "incorrect: 2021/05/31 - 22\n",
+      "incorrect: 2021/06/01 - 04\n",
+      "incorrect: 2021/06/04 - 13\n",
+      "incorrect: 2021/06/07 - 21\n",
+      "incorrect: 2021/06/07 - 22\n",
+      "incorrect: 2021/06/08 - 18\n",
+      "total correct: 23\n",
+      "total incorrect: 47\n"
      ]
     }
    ],
    "source": [
     "def get_ratio(a):\n",
     "    sbm = ['2021/05/22','2021/05/23','2020/12/09','2020/12/10','2020/12/11','2020/12/12','2020/12/13','2020/11/18','2021/05/09','2020/11/17','2021/05/29','2020/12/14']\n",
-    "    fp = ['2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
+    "    fp = ['2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
     "    correct = 0\n",
     "    false = 0\n",
     "    for i in a:\n",
     "        if i[0:10] in sbm:\n",
+    "            print('correct: '+i)\n",
     "            correct = correct +1\n",
     "        else:\n",
     "            false = false + 1 \n",
     "            if i[0:10] not in fp:\n",
     "                print('check ' + i)\n",
+    "            else:\n",
+    "                print('incorrect: ' + i)\n",
     "    return correct,false\n",
-    "print('correct: ' + str(correct))\n",
-    "print('false: ' + str(false))"
+    "correct,false = get_ratio(a)\n",
+    "print('total correct: ' + str(correct))\n",
+    "print('total incorrect: ' + str(false))"
    ]
   },
   {
@@ -566,9 +657,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8 (tensorflow)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -580,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
