--- a/SBM2 degraded tuning.ipynb
+++ b/SBM2 degraded tuning.ipynb
@@ -3413,9 +3413,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3427,7 +3427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
